# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:

2014-10-28 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add timeout argument to the poll function in the PHP CloudI API
    * Fix request_info parsing in the PHP CloudI API

2014-10-27 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add timeout argument to the poll function in both
      the Python CloudI API and the Ruby CloudI API
    * Add more details to the hello_world5 example
    * Fix request_timeout_adjustment usage with the (pure) Python CloudI API
      to use the proper time units

2014-10-26 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix the assertions in the Java messaging integration test

2014-10-25 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Get Java assertions turned on for the integration tests

2014-10-24 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add a fix for new Java CloudI API buffer usage

2014-10-23 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix bug in java messaging integration test
    * Improve Java CloudI API buffer usage
    * Fix bug due to external service logging change (on 2014-10-20)

2014-10-21 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Improve the exception handling in the Java, PHP, Python and Ruby
      CloudI API implementations
    * Add stdout usage upon terminate for all integration test services
    * Add more validation of external service Erlang term data received from
      the external service CloudI API
    * Fix remaining PHP CloudI API bugs

2014-10-20 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add the PHP messaging test
    * Fix various PHP CloudI API errors
    * Fix bug when external services log stdout or stderr data
      that contains a ~ character

2014-10-19 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add the PHP CloudI API
    * Add the PHP http_req test

2014-10-18 Michael Truog   <mjtruog [at] gmail (dot) com>
