@@ -1,6 +1,12 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:
 
+2014-10-29 Michael Truog   <mjtruog [at] gmail (dot) com>
+
+    * Add timeout argument to the poll function in the Java CloudI API
+    * Make the PHP CloudI API cause asserts to exit to keep all the
+      external programming language behavior consistent
+
 2014-10-28 Michael Truog   <mjtruog [at] gmail (dot) com>
 
     * Add timeout argument to the poll function in the PHP CloudI API
